--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
 <body>
     <header>
         <nav class="navbar">
-            <div class="logo"><a href="./Clock.html">CLOCKS</a></div>
+            <div class="logo"><a href="./Clock.html">ClocksTime</a></div>
             <div class="dropdown">
                 <button class="dropbtn">Explore</button>
                 <div class="dropdown-content">
